# bl5340pa_samples

./: .gitignore  README.md
sleepy_advertiser/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.rst  build_time.conf.in  prj.conf  sample.yaml
sleepy_advertiser/child_image/: mock_lcz_fem.nrf21540_ek.overlay  mock_lcz_fem.nrf21540ek.overlay  rtt_log.conf
sleepy_advertiser/src/: main.c
sleepy_advertiser/sysbuild/ipc_radio/: prj.conf
sleepy_advertiser/xxx_child_image/: rtt_log.conf
throughput/: CMakeLists.txt  Kconfig  README.rst  bt_controller.conf  build_time.conf.in  fem.conf  prj.conf  prj_bl5340pa_dvk_cpuapp.conf  prj_nrf5340dk_nrf5340_cpuapp.conf  sample.yaml
throughput/boards/: mock_lcz_fem.nrf21540dk_nrf52840.overlay
throughput/child_image/: hci_ipc.conf  hci_rpmsg.conf  mock_lcz_fem.nrf21540_ek.overlay  mock_lcz_fem.nrf21540ek.overlay
throughput/src/: cmds.c  main.c  main.h
